<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/baseline_contact_page_24"
            android:title="@string/menu_contactus" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/baseline_question_mark_24"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>